now everthing is working fine

--- a/experiments/notebook.ipynb
+++ b/experiments/notebook.ipynb
@@ -4451,10 +4451,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Function for Logistic Regression prediction\n",
+    "def predict_logistic_regression(input_data, model, scaler):\n",
+    "    \"\"\"\n",
+    "    Predicts using Logistic Regression model.\n",
+    "    Parameters:\n",
+    "        input_data (list or array): A single input sample (raw feature values).\n",
+    "        model: Trained Logistic Regression model.\n",
+    "        scaler: Fitted scaler used for data normalization.\n",
+    "    Returns:\n",
+    "        Prediction and probabilities (if applicable).\n",
+    "    \"\"\"\n",
+    "    input_scaled = scaler.transform(np.array(input_data).reshape(1, -1))\n",
+    "    prediction = model.predict(input_scaled)\n",
+    "    probability = model.predict_proba(input_scaled) if hasattr(model, \"predict_proba\") else \"Not available\"\n",
+    "    return prediction[0], probability\n",
+    "\n",
+    "# Function for SVM prediction\n",
+    "def predict_svm(input_data, model, scaler):\n",
+    "    \"\"\"\n",
+    "    Predicts using SVM model.\n",
+    "    Parameters:\n",
+    "        input_data (list or array): A single input sample (raw feature values).\n",
+    "        model: Trained SVM model.\n",
+    "        scaler: Fitted scaler used for data normalization.\n",
+    "    Returns:\n",
+    "        Prediction.\n",
+    "    \"\"\"\n",
+    "    input_scaled = scaler.transform(np.array(input_data).reshape(1, -1))\n",
+    "    prediction = model.predict(input_scaled)\n",
+    "    return prediction[0]\n",
+    "\n",
+    "# Function for KNN prediction\n",
+    "def predict_knn(input_data, model, scaler):\n",
+    "    \"\"\"\n",
+    "    Predicts using KNN model.\n",
+    "    Parameters:\n",
+    "        input_data (list or array): A single input sample (raw feature values).\n",
+    "        model: Trained KNN model.\n",
+    "        scaler: Fitted scaler used for data normalization.\n",
+    "    Returns:\n",
+    "        Prediction.\n",
+    "    \"\"\"\n",
+    "    input_scaled = scaler.transform(np.array(input_data).reshape(1, -1))\n",
+    "    prediction = model.predict(input_scaled)\n",
+    "    return prediction[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_input = [5000, 750, 0.2, 12]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'logreg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Test Logistic Regression\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m log_pred, log_prob \u001b[38;5;241m=\u001b[39m predict_logistic_regression(sample_input, \u001b[43mlogreg\u001b[49m, scaler)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLogistic Regression Prediction:\u001b[39m\u001b[38;5;124m\"\u001b[39m, log_pred)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLogistic Regression Probabilities:\u001b[39m\u001b[38;5;124m\"\u001b[39m, log_prob)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'logreg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Test Logistic Regression\n",
+    "log_pred, log_prob = predict_logistic_regression(sample_input, logreg, scaler)\n",
+    "print(\"Logistic Regression Prediction:\", log_pred)\n",
+    "print(\"Logistic Regression Probabilities:\", log_prob)\n",
+    "\n",
+    "# Test SVM\n",
+    "svm_pred = predict_svm(sample_input, model2, scaler)\n",
+    "print(\"SVM Prediction:\", svm_pred)\n",
+    "\n",
+    "# Test KNN\n",
+    "knn_pred = predict_knn(sample_input, knn, scaler)\n",
+    "print(\"KNN Prediction:\", knn_pred)\n"
+   ]
   }
  ],
  "metadata": {
